# publishing_platform

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
payments/: admin.py  models.py  tests.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment.py
payments/templates/payments/: cancel.html  landing.html  product_create.html  success.html
publications/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
publications/migrations/: 0001_initial.py  0002_initial.py
publications/templates/publications/: contacts.html  finish_subscription.html  homepage.html  publication_confirm_delete.html  publication_detail.html  publication_form.html  publications_list.html
publications/templates/publications/includes/: inc_main_left_menu.html  inc_main_stiles.html
users/: forms.py  models.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_alter_user_user_avatar.py  0002_user_user_description.py  0003_alter_user_user_avatar.py  0003_alter_user_user_description.py  0004_user_user_subscriptions.py  0005_alter_user_user_subscriptions.py
users/templates/users/: code_entering.html  login.html  register.html  registration_confirmed.html  registration_sent_done.html  user_already_exist.html  user_confirmation_failed.html  user_confirmed.html  user_form.html
