[tool.poetry]
name = "publishing-platform"
version = "0.1.0"
description = ""
authors = ["DimaSimakov <dimarodeo@gmail.com>"]
readme = "README.md"
packages = [{include = "publishing_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
stripe = "^7.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
